[gd_scene load_steps=12 format=2]

[ext_resource path="res://EnemySkeleton.gd" type="Script" id=1]
[ext_resource path="res://EnemyStates.gd" type="Script" id=2]
[ext_resource path="res://EnemySignals.gd" type="Script" id=3]
[ext_resource path="res://SpriteSheets/Enemies/Skeleton.png" type="Texture" id=4]

[sub_resource type="Animation" id=18]
resource_name = "SkeletonAttack"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70 ]
}

[sub_resource type="Animation" id=19]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49 ]
}

[sub_resource type="Animation" id=20]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32, 33 ]
}

[sub_resource type="Animation" id=21]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=22]
resource_name = "SkeletonWalk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 10, 40 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 20, 50 )

[node name="EnemySkeleton" type="KinematicBody2D"]
editor/display_folded = true
position = Vector2( 240, 36 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="States" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Signals" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( -40, -40 )
texture = ExtResource( 4 )
flip_h = true
vframes = 4
hframes = 18
frame = 60

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/SkeletonAttack = SubResource( 18 )
anims/SkeletonDead = SubResource( 19 )
anims/SkeletonHit = SubResource( 20 )
anims/SkeletonIdle = SubResource( 21 )
anims/SkeletonWalk = SubResource( 22 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource( 23 )

[node name="HitArea" type="Area2D" parent="."]
editor/display_folded = true

[node name="HitBox" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 24 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( -192, 0 )
[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="Signals" method="_on_AnimationPlayer_animation_finished"]
